# Gwent5

./: .gitignore  CMakeLists.txt  Gwent5.pro  README.md  card.cpp  card.h  cards.h  iterator.h  main.cpp
.github/workflows/: cmake.yml  qmake.yml
Cards/: Cards.pri  Gwent5.pro  archieve.cpp  archieve.h  archieve.md  card.cpp  card.h  cards.h  demos.cpp  demos.h  enums.h  filters.h  io.cpp  io.h  iterator.h  main.cpp  testcase.cpp  testcase.h  textsen.cpp  textsen.h  view.cpp  view.h
Cleint/: Cleint.pro  mainwindow.cpp  mainwindow.h
Client/: Client.pro  cardinfo.cpp  cardinfo.h  main.cpp  mainwindow.cpp  mainwindow.h
Tcp/: Tcp.pro  client.cpp  client.h  host.cpp  host.h  mainwindow.cpp  mainwindow.h
Tests/: Match.pro  Tests.pri  Tests.pro  Write.pro  main.cpp  match.cpp  tests.cpp  tests.h  write.cpp
Tests/Cases/: Cases.pro  banish.cpp  main.cpp  simple_expected  swap.cpp  test2.cpp  test_choice.cpp  test_createFilavandrel.cpp  test_defaultCopyHalfElfHunter.cpp  test_dolBlathannaArcherSeparatedShots.cpp  test_doomed.cpp  test_exactCopyDolBlathannaArcher.cpp  test_firstsAndLasts.cpp  test_game.cpp  test_hasExactTwoDuplicatesOfBronze.cpp  test_hasNoDuplicates.cpp  test_highestsAndLowests.cpp  test_isIn.cpp  test_optionsMandrake.cpp  test_powerRow.cpp  test_selectingImmuneWerewolf.cpp  test_stateCopyVsExactCopy.cpp  test_statelessCardCopyVsExactCopy.cpp  test_transformArtefactCompression.cpp  test_transformCursedKnight.cpp  test_transformRagingBerserk.cpp  tests.cpp  tests.h  tools.cpp
Tests/Obsolete/: test_swap.cpp
Tools/: FetchInfo.md  FetchInfo.sh
Widgets/: Widgets.pro  cardsfieldview.cpp  cardsfieldview.h  cardsingleview.cpp  cardsingleview.h  cardslineview.cpp  cardslineview.h  cardspainting.cpp  cardspainting.h  formdeckbuilder.cpp  formdeckbuilder.h  formgame.cpp  formgame.h  main.cpp  mainwindow.cpp  mainwindow.h  resourcemanager.cpp  resourcemanager.h
build-Gwent5-Desktop_Qt_5_9_1_MinGW_32bit-Debug/: .qmake.stash
